--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<head> 
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 <!-- navigation -->
     <header> 
         <h1>RUN BUDDY</h1>
