--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
 </head>
 <body>
 <!-- navigation -->
-    <header> 
-        <h1>RUN BUDDY</h1>
+    <header>
+        <h1>
+            <a href="/">RUN BUDDY</a>
+        </h1>
+        <nav>
+            <!-- Unbordered List element -->
+            <ul>
+                <!-- List item element-->
+                <li>
+                    <!-- Ancor element -->
+                    <a href="#what-we-do"> What We Do</a>
+                </li>
+                <li>
+                    <a href="#what-you-do"> WHat You DO</a>
+                </li>
+                <li>
+                    <a href="#your-trainers">Your Trainers</a>
+                </li>
+                 <li>
+                     <a href="#reach-out">Reach Out</a>
+                 </li>
+            </ul>
+        </nav>
     </header>
+<section>
+    <div>
+        <h3>Get Started Today</h3>
+        <p> Fill out this form and one of our trainers will schedule a consult</p>
+    </div>
+</section>
+
    
 <!-- hero/jumbotron -->
     <section>
